--- a/mystyle.css
+++ b/mystyle.css
@@ -1,3 +1,9 @@
+/*global changes*/
+body {
+    color: hsl(0, 0%, 100%);
+    background-color: #000000;
+}
+
 header {
     text-align: center;
     color: purple;
