--- a/mystyle.css
+++ b/mystyle.css
@@ -2,16 +2,24 @@
 body {
     color: hsl(0, 0%, 100%);
     background-color: #000000;
+    font-size: .5cm;
 }
 
 header {
     text-align: center;
     color: purple;
+    font-size: 1em;
 }
 #title {
     color: rgb(0, 222, 255);
+    font-size: 8ex;
 }
-body {
-    color: hsl(0, 0%, 100%);
-    background-color: #000000;
+h2{
+    font-size:50px
+}
+#contents {
+    font-size: 2ch
+}
+Footer{
+    font-size: 15Q
 }
