--- a/mystyle.css
+++ b/mystyle.css
@@ -51,7 +51,11 @@ main ul{
     position: relative;
     left: 100px;
 }
-
+@media only screen and (max-width: 600px) {
+    main {
+      background-color: navy;
+    }
+  }
 Footer{
     font-size: 15Q;
     display: inline;
